set up recipe show page with basic bootstrap styling

--- a/public/templates/recipes/show.html
+++ b/public/templates/recipes/show.html
@@ -1,5 +1,33 @@
-<h1>Static works!</h1>
+<div class='row'>
 
-<h2>{{ testValue }}</h2>
+  <div class='col-md-8'>
+    <h1>Recipe Title</h1>
+    <h3>Recipe Author</h3>
+    <h3>Source, description, etc</h3>
+  </div>
 
-<p>{{ currentUser }}</p>
+  <div class='col-md-4'>
+    <img class='img img-responsive'>
+  </div>
+
+</div>
+
+
+
+<div class='row'>
+
+  <div class='col-md-8'>
+    <h4>Directions</h4>
+    <p>And the directions go here</p>
+  </div>
+
+  <div class='col-md-4'>
+    <h4>Ingredients</h4>
+    <ul>
+      <li>Ingredient One</li>
+      <li>Ingredient Two</li>
+      <li>Ingredient Three</li>
+    </ul>
+  </div>
+
+</div>
