--- a/public/templates/recipes/show.html
+++ b/public/templates/recipes/show.html
@@ -1,13 +1,13 @@
-<div class='row'>
+<div class='row text-center'>
 
-  <div class='col-md-8'>
-    <h1>Recipe Title</h1>
+  <div class='col-sm-8'>
+    <h2>Recipe Title</h2>
     <h3>Recipe Author</h3>
     <h3>Source, description, etc</h3>
   </div>
 
-  <div class='col-md-4'>
-    <img class='img img-responsive'>
+  <div class='col-sm-4'>
+    <img src="https://placeholdit.imgix.net/~text?txtsize=30&txt=320%C3%97320&w=320&h=320" class='img img-responsive'>
   </div>
 
 </div>
@@ -16,12 +16,12 @@
 
 <div class='row'>
 
-  <div class='col-md-8'>
+  <div class='col-sm-8'>
     <h4>Directions</h4>
     <p>And the directions go here</p>
   </div>
 
-  <div class='col-md-4'>
+  <div class='col-sm-4'>
     <h4>Ingredients</h4>
     <ul>
       <li>Ingredient One</li>
