add recipe resolve to show route

--- a/public/templates/recipes/show.html
+++ b/public/templates/recipes/show.html
@@ -1,8 +1,8 @@
 <div class='row text-center'>
 
   <div class='col-sm-8'>
-    <h2>Recipe Title</h2>
-    <h3>Recipe Author</h3>
+    <h2>{{ recipe.title }}</h2>
+    <h3>{{ recipe.author }}</h3>
     <h3>Source, description, etc</h3>
   </div>
 
