add scraper form

--- a/public/templates/recipes/show.html
+++ b/public/templates/recipes/show.html
@@ -1,3 +1,21 @@
+<div class='row'>
+  <form name='scraper-url' class='form-horizontal'>
+
+    <div class='col-xs-10'>
+      <div class='form-group'>
+        <input type="text" placeholder='Enter a URL to import...' class='form-control'>
+      </div>
+    </div>
+
+    <div class='col-xs-2'>
+      <input type="submit" class='btn btn-block' value='Import!'>
+    </div>
+
+  </form>
+</div>
+
+
+
 <div class='row text-center'>
 
   <div class='col-sm-8'>
