--- a/public/templates/users/show.html
+++ b/public/templates/users/show.html
@@ -1,2 +1,49 @@
-<h1>user profile</h1>
-<h2> {{ profile }} </h2>
+<div class='jumbotron'>
+
+  <div class="row">
+
+    <div name="harold" class="col-xs-4">
+      <img src="https://cldup.com/QiXfZQ31vQ.jpg" class="img-responsive">
+    </div>
+
+    <div name="profile-info" class="col-xs-8">
+      <h2 class="text-center">{{ profile.first_name }} {{ profile.last_name }}</h2>
+      <br />
+      <p class="location"><strong>From: </strong>{{ profile.location }}</p>
+      <br />
+      <p class="recipe-count"><strong>Number of recipes: </strong> {{ recipes.length }}</p>
+    </div>
+
+  </div>
+
+</div>
+
+<div class="row">
+
+  <div class="col-xs-3">
+    <p ng-if="$scope.currentUser.id == $stateParams.userId">
+      <a href="/#/recipes/new">+ Add a recipe</a>
+    </p>
+  </div>
+
+  <div class="col-xs-6">
+    <h1 class="text-center">{{ profile.first_name }}'s Recipes</h1>
+    <br />
+  </div>
+
+  <div class="col-xs-3">
+    <p class="pull-right" ng-if="$scope.currentUser.id == $stateParams.userId">view buttons</p>
+  </div>
+
+</div>
+
+<div class="row">
+
+  <div ng-repeat="recipe in recipes" class="col-xs-3 text-center">
+    <img class="img-responsive" src="{{ recipe.photo_url }}">
+    <p><strong>{{ recipe.title }}</strong> by {{ recipe.author }}</p>
+    <p>ADD RECIPE ORIGIN ATTRIBUTE HERE!</p>
+    <p>Difficulty - length - rating</p>
+  </div>
+
+</div>
