complete profile editing

--- a/public/templates/users/show.html
+++ b/public/templates/users/show.html
@@ -7,10 +7,19 @@
     </div>
 
     <div name="profile-info" class="col-xs-8" ng-if="$scope.currentUser.id == $stateParams.userId">
-      <h2 class="text-center"><a href="#" editable-text="profile.first_name" onaftersave="updateProfile()">{{ profile.first_name }}</a> {{ profile.last_name }}</h2>
+      <h2 class="text-center">
+        <a href="#" editable-text="profile.first_name" onaftersave="updateProfile()">{{ profile.first_name }}</a>
+        <a href="#" editable-text="profile.last_name" onaftersave="updateProfile()">{{ profile.last_name }}</a>
+      </h2>
+
       <br />
-      <p class="location"><strong>From: </strong>{{ profile.location }}</p>
+
+      <p class="location">
+        <strong>From: </strong><a href="#" editable-text="profile.location" onaftersave="updateProfile()">{{ profile.location }}</a>
+      </p>
+
       <br />
+
       <p class="recipe-count"><strong>Number of recipes: </strong> {{ recipes.length }}</p>
     </div>
 
