build recipe print show page

--- a/public/templates/recipes/show.html
+++ b/public/templates/recipes/show.html
@@ -1,7 +1,7 @@
 <div class='row recipe-controls'>
 
   <div class='col-xs-12 text-right'>
-    <button href class='btn btn-primary'>
+    <button href class='btn btn-primary' ng-click='printRecipe()'>
       <span class='glyphicon glyphicon-print'></span>
     </button>
 
