--- a/public/templates/users/show.html
+++ b/public/templates/users/show.html
@@ -12,7 +12,7 @@
 
     </div>
 
-    <div name="profile-info" class="col-xs-8" ng-if="$scope.currentUser.id == $stateParams.userId">
+    <div name="profile-info" class="col-xs-8" ng-if="currentUserID == currentProfileID">
       <h2 class="text-center">
         <a href="#" editable-text="profile.first_name" onaftersave="updateProfile()">{{ profile.first_name }} </a>
         <a href="#" editable-text="profile.last_name" onaftersave="updateProfile()">{{ profile.last_name }}</a>
@@ -30,7 +30,7 @@
       <button type="button" class="btn btn-primary pull-right" ng-click="deleteAccount()">Delete account?</button>
     </div>
 
-    <div name="profile-info" class="col-xs-8" ng-if="$scope.currentUser.id != $stateParams.userId">
+    <div name="profile-info" class="col-xs-8" ng-if="currentUserID != currentProfileID">
       <h2 class="text-center">{{ profile.first_name }} {{ profile.last_name }}</h2>
       <br />
       <p class="location"><strong>From: </strong>{{ profile.location }}</p>
@@ -45,13 +45,24 @@
 <div class="row">
 
   <div class="col-xs-3">
-    <p ng-if="$scope.currentUser.id == $stateParams.userId">
+    <p ng-if="currentUser.id == currentProfileID">
       <a href="/#/recipes/new">+ Add a recipe</a>
     </p>
+
+    <label>Search: <input ng-model="filterText"></label>
   </div>
 
-  <div class="col-xs-6">
-    <h1 class="text-center">{{ profile.first_name }}'s Recipes</h1>
+  <div class="col-xs-6 text-center">
+    <h1>{{ profile.first_name }}'s Recipes</h1>
+
+    <h3>Sort by:</h3>
+    <a href ng-click="sortType = 'title'; sortReverse = !sortReverse">title</a>
+    <a href ng-click="sortType = 'author'; sortReverse = !sortReverse">author</a>
+    <a href ng-click="sortType = 'origin'; sortReverse = !sortReverse">origin</a>
+    <a href ng-click="sortType = 'difficulty'; sortReverse = !sortReverse">difficulty</a>
+    <a href ng-click="sortType = 'rating'; sortReverse = !sortReverse">rating</a>
+
+    <br />
     <br />
   </div>
 
@@ -66,7 +77,7 @@
 
 <div ng-if="viewMode == 'thumbnail'" class="row">
 
-  <div ng-repeat="recipe in recipes" class="col-xs-3 text-center">
+  <div ng-repeat="recipe in recipes | filter:filterText | orderBy:sortType:sortReverse" class="col-xs-3 text-center">
 
     <div class="recipe-image">
       <img class="img-responsive" ng-src="{{ recipe.photo_url }}">
@@ -86,13 +97,13 @@
   <div class="col-xs-12">
     <table>
     	<tr>
-    		<th>Title</th>
-    		<th>Author</th>
-        <th>Origin</th>
-        <th>Difficulty</th>
-    		<th>Rating</th>
+    		<th><a href ng-click="sortType = 'title'; sortReverse = !sortReverse">Title</a></th>
+    		<th><a href ng-click="sortType = 'author'; sortReverse = !sortReverse">Author</a></th>
+        <th><a href ng-click="sortType = 'origin'; sortReverse = !sortReverse">Origin</a></th>
+        <th><a href ng-click="sortType = 'difficulty'; sortReverse = !sortReverse">Difficulty</a></th>
+    		<th><a href ng-click="sortType = 'rating'; sortReverse = !sortReverse">Rating</a></th>
     	</tr>
-    	<tr ng-repeat="recipe in recipes">
+    	<tr ng-repeat="recipe in recipes | orderBy:sortType:sortReverse">
     		<td>{{ recipe.title }}</td>
     		<td>{{ recipe.author }}</td>
         <td>{{ recipe.origin }}</td>
