--- a/app/views/shared/_navbar_guest.html.erb
+++ b/app/views/shared/_navbar_guest.html.erb
@@ -3,7 +3,7 @@
 
   <%= menu_group :pull => :right do %>
     <%= menu_item "Sign Up", new_user_registration_path %>
-    <%= menu_item "Log In", new_user_session_path %>
+    <%= menu_item "Log In", "#/sign_in" %>
   <% end %>
 
 
