--- a/public/templates/sign_in.html
+++ b/public/templates/sign_in.html
@@ -21,6 +21,14 @@
         <br />
         <input type="password" class="form-control" placeholder="Password Confirmation" ng-model='credentials.password_confirmation'>
         <br>
+        <!-- Remember Me checkbox - hacky formatting since it's not wrapper in form tag -->
+        <div class='form-group form-inline'>
+          <label>
+            <input type="checkbox" class='form-control' ng-model='credentials.remember_me'>
+            Remember Me
+          </label>
+        <br>
+        <!--  -->
         <button class="btn btn-primary" ng-click="login()">We missed you!</button>
       </div>
     </div>
