--- a/public/templates/sign_in.html
+++ b/public/templates/sign_in.html
@@ -14,24 +14,44 @@
 
     <div class="col-xs-12 text-center sign-in">
       <div class="col-xs-12 text-center">
-        <h1>Sign in to your account</h1>
-        <input type="text" class="form-control" placeholder="Email" ng-model='credentials.email'>
-        <br />
-        <input type="password" class="form-control" placeholder="Password" ng-model='credentials.password'>
-        <br />
-        <input type="password" class="form-control" placeholder="Password Confirmation" ng-model='credentials.password_confirmation'>
-        <br>
-        <!-- Remember Me checkbox - hacky formatting since it's not wrapper in form tag -->
-        <div class='form-group form-inline'>
-          <label>
-            <input type="checkbox" class='form-control' ng-model='credentials.remember_me'>
-            Remember Me
-          </label>
-        <br>
-        <!--  -->
-        <button class="btn btn-primary" ng-click="login()">We missed you!</button>
+
+        <!-- Regular Log In -->
+        <div ng-if="!recover">
+          <h1>Sign in to your account</h1>
+          <input type="text" class="form-control" placeholder="Email" ng-model='credentials.email'>
+          <br />
+          <input type="password" class="form-control" placeholder="Password" ng-model='credentials.password'>
+          <br />
+          <input type="password" class="form-control" placeholder="Password Confirmation" ng-model='credentials.password_confirmation'>
+          <br>
+          <!-- Remember Me checkbox - hacky formatting since it's not wrapper in form tag -->
+          <div class='form-group form-inline'>
+            <label>
+              <input type="checkbox" class='form-control' ng-model='credentials.remember_me'>
+              Remember Me
+            </label>
+          </div>
+          <br>
+          <!--  -->
+          <button class="btn btn-primary" ng-click="login()">We missed you!</button>
+          <br>
+          <a href class='pull-right' ng-click="toggleRecover()">Forgot your password?</a>
+        </div>
+
+
+        <!-- Reset password -->
+        <div ng-if="recover">
+          <h1>Enter email to have your password reset</h1>
+          <input type="text" class="form-control" placeholder="Email" ng-model='credentials.email'>
+          <br />
+          <button class="btn btn-primary" ng-click="resetPassword()">Reset Password</button>
+          <br>
+          <a href class='pull-right' ng-click="toggleRecover()">Back to Log In</a>
+        </div>
+
       </div>
     </div>
+
 
   </div>
 
