--- a/public/templates/users/show.html
+++ b/public/templates/users/show.html
@@ -3,11 +3,10 @@
   <div class="row">
 
     <div name="harold" class="col-xs-4">
-      <img ng-src="https://cldup.com/QiXfZQ31vQ.jpg" class="img-responsive">
+      <img ng-src="{{profile.avatar}}" class="img-responsive">
 
-      <form name='avatarForm'>
-        <input type="file" file-upload>
-        <input type='submit' value="Upload!">
+      <form name='avatarForm' ng-submit="updateProfile()">
+        <input type="file" name="avatar" onchange="angular.element(this).scope().uploadFile(this.files)">
       </form>
 
     </div>
