--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,7 +1,7 @@
 <div class="login-container container-fluid">
   <div class="bg"></div>
 
-  <div class="jumbotron text-center">
+  <div class="jumbotron splash text-center">
     <br />
     <br />
     <br /> <!-- lazy centering -->
