--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -13,7 +13,7 @@
   z-index: -1;
 }
 
-.jumbotron {
+.jumbotron.splash {
   color: white;
   text-shadow: #444 0 1px 1px;
   background:transparent;
