--- a/public/templates/users/show.html
+++ b/public/templates/users/show.html
@@ -45,7 +45,7 @@
 
   <div class="col-xs-4">
     <p ng-if="currentUser.id == currentProfileID">
-      <a href="/#/recipes/new">+ Add a recipe</a>
+      <a href ng-click="newRecipe()">+ Add a recipe</a>
     </p>
 
     <label>Search: <input ng-model="filterText"></label>
