add hover on note count and icons on recipe show

--- a/public/templates/recipes/show.html
+++ b/public/templates/recipes/show.html
@@ -70,35 +70,43 @@
     <div class='row'>
 
       <div class='col-sm-8'>
+        
         <h4>Directions</h4>
-        <p ng-repeat='instruction in recipe.instructions' editable-textarea='instruction.body' e-rows="4" e-cols="90" onaftersave='updateRecipe()'>
-          {{ instruction.body }}
+
+        <p ng-repeat='instruction in recipe.instructions'>
+          <span editable-textarea='instruction.body' e-rows="4" onaftersave='updateRecipe()'>
+            {{ instruction.body }}
+          </span>
+
           <a href ng-if='instruction.notes.length > 0'>
-            {{instruction.notes.length}}
-            <ng-pluralize count="instruction.notes.length"
-                when="{'1': 'note',
-                       'other': 'notes'}">
-            </ng-pluralize
+            {{ noteCount(instruction) }}
           </a>
           <a href ng-if='instruction.notes.length == 0'>
             + add a note
           </a>
         </p>
+
       </div>
 
+
       <div class='col-sm-4'>
+
         <h4>Ingredients</h4>
-        <ul>
-          <li ng-repeat='ingredient in recipe.ingredients' editable-textarea='ingredient.name' e-rows="1" e-cols="30" onaftersave='updateRecipe()'>
-            {{ ingredient.name }}
-            <a href ng-if='ingredient.notes.length > 0'>
-              <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
-            </a>
-            <a href ng-if='ingredient.notes.length == 0'>
-              <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
-            </a>
-          </li>
-        </ul>
+
+        <table class='table table-condensed'>
+          <tr ng-repeat='ingredient in recipe.ingredients'>
+            <td editable-textarea='ingredient.name' e-rows="2" onaftersave='updateRecipe()'>{{ ingredient.name }}</td>
+            <td>
+              <a href ng-if='ingredient.notes.length > 0' title='{{ noteCount(ingredient) }}'>
+                <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+              </a>
+              <a href ng-if='ingredient.notes.length == 0' title='add a note'>
+                <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
+              </a>
+            </td>
+          </tr>
+        </table>
+
       </div>
 
     </div>
