--- a/public/templates/recipes/show.html
+++ b/public/templates/recipes/show.html
@@ -70,7 +70,7 @@
     <div class='row'>
 
       <div class='col-sm-8'>
-        
+
         <h4>Directions</h4>
 
         <p ng-repeat='instruction in recipe.instructions'>
@@ -78,10 +78,10 @@
             {{ instruction.body }}
           </span>
 
-          <a href ng-if='instruction.notes.length > 0' ng-click='openModal(instruction)'>
+          <a href ng-if='instruction.notes.length > 0' ng-click="openModal(instruction, 'Instruction')">
             {{ noteCount(instruction) }}
           </a>
-          <a href ng-if='instruction.notes.length == 0' ng-click='openModal(instruction)'>
+          <a href ng-if='instruction.notes.length == 0' ng-click="openModal(instruction, 'Instruction')">
             + add a note
           </a>
         </p>
@@ -97,10 +97,10 @@
           <tr ng-repeat='ingredient in recipe.ingredients'>
             <td editable-textarea='ingredient.body' e-rows="2" onaftersave='updateRecipe()'>{{ ingredient.body }}</td>
             <td>
-              <a href ng-if='ingredient.notes.length > 0' ng-click='openModal(ingredient)' title='{{ noteCount(ingredient) }}'>
+              <a href ng-if='ingredient.notes.length > 0' ng-click="openModal(ingredient, 'Ingredient')" title='{{ noteCount(ingredient) }}'>
                 <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
               </a>
-              <a href ng-if='ingredient.notes.length == 0' ng-click='openModal(ingredient)' title='add a note'>
+              <a href ng-if='ingredient.notes.length == 0' ng-click="openModal(ingredient, 'Ingredient')" title='add a note'>
                 <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
               </a>
             </td>
